tests/fail/test-neg-type-conflict.ctds
integer x;

integer sum(integer a, bool b){
  return a + b;
}

integer main(){
  return 5;
}
